--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
   flutter_bloc: ^8.1.6
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
