--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dev_dependencies:
 
 
 flutter:
-
+  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
